crates/dekaf/src/snapshots/dekaf__log_journal__tests__session_logger_and_task_name.snap
---
source: crates/dekaf/src/log_journal.rs
assertion_line: 457
expression: captured_logs
---
[
  {
    "_meta": {
      "uuid": "[uuid]"
    },
    "fields": {
      "module": "dekaf::log_journal::tests"
    },
    "level": "info",
    "message": "Test log data but with a SessionLogger, still should see me",
    "spans": [
      {
        "fields": {
          "module": "dekaf::log_journal::tests"
        },
        "level": "info",
        "message": "dekaf_session",
        "ts": "[ts]"
      }
    ],
    "ts": "[ts]"
  },
  {
    "_meta": {
      "uuid": "[uuid]"
    },
    "fields": {
      "module": "dekaf::log_journal::tests"
    },
    "level": "info",
    "message": "Test log data with a task name!",
    "spans": [
      {
        "fields": {
          "module": "dekaf::log_journal::tests"
        },
        "level": "info",
        "message": "dekaf_session",
        "ts": "[ts]"
      },
      {
        "fields": {
          "module": "dekaf::log_journal::tests",
          "session_task_name": "my_task"
        },
        "level": "info",
        "ts": "[ts]"
      }
    ],
    "ts": "[ts]"
  }
]
