crates/dekaf/src/snapshots/dekaf__log_journal__tests__session_logger_and_task_name_hierarchical.snap
---
source: crates/dekaf/src/log_journal.rs
expression: captured_logs
---
[
  {
    "_meta": {
      "uuid": "[uuid]"
    },
    "fields": {
      "module": "dekaf::log_journal::tests",
      "session_task_name": "my-task"
    },
    "level": "info",
    "message": "Test log data but with a SessionLogger, still should see me",
    "spans": [
      {
        "fields": {
          "module": "dekaf::log_journal::tests"
        },
        "level": "info",
        "message": "dekaf_session",
        "ts": "[ts]"
      }
    ],
    "ts": "[ts]"
  },
  {
    "_meta": {
      "uuid": "[uuid]"
    },
    "fields": {
      "module": "dekaf::log_journal::tests",
      "session_task_name": "my-task"
    },
    "level": "info",
    "message": "Test log data without a task name yet!",
    "spans": [
      {
        "fields": {
          "module": "dekaf::log_journal::tests"
        },
        "level": "info",
        "message": "dekaf_session",
        "ts": "[ts]"
      },
      {
        "fields": {
          "module": "dekaf::log_journal::tests"
        },
        "level": "info",
        "message": "child_span",
        "ts": "[ts]"
      }
    ],
    "ts": "[ts]"
  },
  {
    "_meta": {
      "uuid": "[uuid]"
    },
    "fields": {
      "module": "dekaf::log_journal::tests",
      "session_client_id": "my-client-id",
      "session_task_name": "my-task"
    },
    "level": "info",
    "message": "I should have a client ID",
    "spans": [
      {
        "fields": {
          "module": "dekaf::log_journal::tests",
          "session_client_id": "my-client-id",
          "session_task_name": "my-task"
        },
        "level": "info",
        "message": "dekaf_session",
        "ts": "[ts]"
      },
      {
        "fields": {
          "module": "dekaf::log_journal::tests"
        },
        "level": "info",
        "message": "child_span",
        "ts": "[ts]"
      }
    ],
    "ts": "[ts]"
  },
  {
    "_meta": {
      "uuid": "[uuid]"
    },
    "fields": {
      "module": "dekaf::log_journal::tests",
      "session_client_id": "my-client-id",
      "session_task_name": "my-task"
    },
    "level": "info",
    "message": "I should also have a client ID",
    "spans": [
      {
        "fields": {
          "module": "dekaf::log_journal::tests",
          "session_client_id": "my-client-id",
          "session_task_name": "my-task"
        },
        "level": "info",
        "message": "dekaf_session",
        "ts": "[ts]"
      }
    ],
    "ts": "[ts]"
  }
]
